--- a/app.css
+++ b/app.css
@@ -5,20 +5,27 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
+  border: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
   box-sizing: inherit;
 }
 
 #app {
   width: 100%;
   height: 100%;
+
   background: #101214;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,25 +35,34 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: bold;
   font-family: 'Roboto', sans-serif;
-  font-size: min(max(24px, calc(100vw / 6)), 100px);
+  font-size: 175px;
   line-height: 0;
 }
 
 .flip-clock-container * {
+  -webkit-user-select: none;
+  -moz-user-select: none;
   user-select: none;
+
   cursor: default;
 }
 
 .flip-clock {
   display: flex;
+
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
   perspective: 1000px;
 }
 
 .digit {
   position: relative;
-  width: min(max(60px, calc(30vw)), 180px);
-  height: min(max(100px, calc(30vw * 16 / 9)), 320px);
+
+  width: 180px;
+  height: 320px;
+
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
 }
 
@@ -61,8 +77,11 @@ body {
 .digit::before,
 .digit::after {
   position: absolute;
+  z-index: 0;
+
   display: flex;
   justify-content: center;
+
   width: 100%;
   height: 50%;
   overflow: hidden;
@@ -70,23 +89,39 @@ body {
 
 .digit::before {
   content: attr(data-digit-before);
+
   bottom: 0;
   align-items: flex-start;
 }
 
 .digit::after {
   content: attr(data-digit-after);
+
   top: 0;
   align-items: flex-end;
 }
 
 .card {
   position: relative;
+  z-index: 1;
+
   width: 100%;
   height: 50%;
+
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
+
+  -webkit-transform-origin: bottom;
+  -moz-transform-origin: bottom;
   transform-origin: bottom;
+
+  -webkit-transform: rotateX(0);
+  -moz-transform: rotateX(0);
   transform: rotateX(0);
+
+  -webkit-transition: transform .7s ease-in-out;
+  -moz-transition: transform .7s ease-in-out;
   transition: transform .7s ease-in-out;
 }
 
@@ -96,11 +131,16 @@ body {
 
 .card-face {
   position: absolute;
+
   display: flex;
   justify-content: center;
+
   width: 100%;
   height: 100%;
   overflow: hidden;
+
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
@@ -110,6 +150,9 @@ body {
 
 .card-face-back {
   align-items: flex-start;
+
+  -webkit-transform: rotateX(-180deg);
+  -moz-transform: rotateX(-180deg);
   transform: rotateX(-180deg);
 }
 
@@ -133,14 +176,20 @@ body {
 .card-face-back {
   background: #1d1e1f;
   color: #ffffff;
+
   border-top: 1px solid black;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .digit::after,
 .card-face-front {
   background: #1d1e1f;
   color: #ffffff;
+
   border-bottom: 1px solid black;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .digit-left,
@@ -172,18 +221,8 @@ body {
   color: #7A7C80;
   width: 100%;
   bottom: 5%;
+  align-items: center;
   text-align: center;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
-}
-
-@media (max-width: 600px) {
-  .flip-clock-container {
-    font-size: 20vw;
-  }
-
-  .digit {
-    width: 20vw;
-    height: 30vw;
-  }
 }
